[package]
name = "kalman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#csv = "1.1.6"
#fast-float = "0.2.0"
ndarray = "*"
#plotly = "0.8.1"
rand = "0.8.5"
rand_distr = "0.4.3"
simple-plot = "*"
num-traits = "*"
ndarray-inverse = "*"

[profile.release]
strip = true
opt-level = 3
#opt-level = "s"
#lto = true
panic = "abort"
